augmentation files added

--- a/etd_segmentation/src/augmentation/ack_text_img_aug.ipynb
+++ b/etd_segmentation/src/augmentation/ack_text_img_aug.ipynb
@@ -68,10 +68,11 @@
     "        w, h = draw.textsize(text)\n",
     "        ## Adjust the texual position in a page and draw the text on a image\n",
     "        '''\n",
-    "        dedication -- 10 width and height 6; \n",
+    "        dedication -- 14 width and height 8; \n",
     "        ack -- 15 width and 6 height; \n",
-    "        gabs -- 13 width and height 16;\n",
-    "        abstract -- 20 width and height 6\n",
+    "        gabs -- 13 width and height 16\n",
+    "        abstract -- 16 width and height 12\n",
+    "        chapter abstract -- 18 width and height 6\n",
     "        '''\n",
     "        draw.text(((self.W-w)/15,(self.H-h)/6), text, font=font, fill=(0,0,0), spacing=60)\n",
     "        image.save(fileName)\n",
