--- a/etd_segmentation/src/augmentation/chabs_text_img_aug.ipynb
+++ b/etd_segmentation/src/augmentation/chabs_text_img_aug.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,11 +48,13 @@
     "\n",
     "    def list_of_chapter_abs(self, chapter_abs_text):\n",
     "        list_chapter_abs = []\n",
+    "        counter = 0\n",
     "        self.chapter_abs_text = chapter_abs_text\n",
     "        for text in self.chapter_abs_text:\n",
+    "            counter += 1\n",
     "            for row in text:\n",
     "                chapter_abs_text_wrap = augmentation.wrap_text(row)\n",
-    "                chapter_abs_title = \"\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\tChapter {}\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\tAbstract\\n\".format(n) + chapter_abs_text_wrap\n",
+    "                chapter_abs_title = \"\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\tChapter {}\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\tAbstract\\n\".format(counter) + chapter_abs_text_wrap\n",
     "                list_chapter_abs.append(chapter_abs_title)\n",
     "        return list_chapter_abs\n",
     "    \n",
@@ -68,13 +70,13 @@
     "        w, h = draw.textsize(text)\n",
     "        ## Adjust the texual position in a page and draw the text on a image\n",
     "        '''\n",
-    "        dedication -- 10 width and height 6; \n",
+    "        dedication -- 14 width and height 8; \n",
     "        ack -- 15 width and 6 height; \n",
     "        gabs -- 13 width and height 16\n",
-    "        abstract -- 20 width and height 6\n",
-    "        chapter abstract -- 5 width and height 6\n",
+    "        abstract -- 16 width and height 12\n",
+    "        chapter abstract -- 18 width and height 6\n",
     "        '''\n",
-    "        draw.text(((self.W-w)/5,(self.H-h)/6), text, font=font, fill=(0,0,0), spacing=60)\n",
+    "        draw.text(((self.W-w)/18,(self.H-h)/6), text, font=font, fill=(0,0,0), spacing=60)\n",
     "        image.save(fileName)\n",
     "        \n",
     "        return image\n",
@@ -84,7 +86,7 @@
     "        self.chapter_abs_text_title = chapter_abs_text_title\n",
     "        for n, row in enumerate(self.chapter_abs_text_title):\n",
     "            fileName = (\"/home/mchou001/Label-ChapterAbstract/aug_text{}.png\".format(n))\n",
-    "            save_image = self.text_on_img(fileName, row, 40) ## dedication -- 43, ack and chapter abstract and abstract - 40, gabs -- 38\n",
+    "            save_image = self.text_on_img(fileName, row, 39) ## dedication -- 43, ack -- 40, chapter abstract - 39 and abstract - 40, gabs -- 38\n",
     "        \n",
     "        return save_image\n",
     "    \n",
@@ -111,15 +113,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 0 ns, sys: 9 µs, total: 9 µs\n",
-      "Wall time: 21.9 µs\n"
+      "CPU times: user 7 µs, sys: 0 ns, total: 7 µs\n",
+      "Wall time: 21.7 µs\n"
      ]
     }
    ],
