--- a/etd_segmentation/src/augmentation/gabs_text_img_aug.ipynb
+++ b/etd_segmentation/src/augmentation/gabs_text_img_aug.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### This script is taking all the dedication text, processing it, and then calling paraphrasing model to perform text based Augmentation. Then save the result as a image(.png) format. Finally, it goes through all the images and perform image transformation and save the result as .png format."
+    "### This script is taking all the chapter abstract text, process it, and then call paraphrasing model to perform text based Augmentation. Then save the result as a image(.png) format. Finally, it goes through all the images and perform image transformation and save the result as .png format."
    ]
   },
   {
@@ -30,31 +30,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class DEDICATION_TEXT_IMG_AUG:\n",
+    "class GABS_TEXT_IMG_AUG:\n",
     "    \n",
-    "    def list_of_phrases(self, phrases_dedication):\n",
+    "    def list_of_phrases(self, phrases_abs):\n",
     "        phrases_list = []\n",
-    "        self.phrases_dedication = phrases_dedication\n",
-    "        for text in self.phrases_dedication:\n",
-    "            dedication = parser.preprocess_dedication(text)\n",
-    "            dedication_paraphrase = augmentation.paraphrased_text(dedication)\n",
-    "            dedication_list = [dedication_paraphrase]\n",
-    "            phrases_list.append(dedication_list)\n",
+    "        self.phrases_abs = phrases_abs\n",
+    "        for text in self.phrases_abs:\n",
+    "            abs_ = parser.preprocess_cabs_abs(text)\n",
+    "            abs_paraphrase = augmentation.paraphrased_text(abs_)\n",
+    "            abs_list = [abs_paraphrase]\n",
+    "            phrases_list.append(abs_list)\n",
     "        \n",
     "        return phrases_list\n",
     "\n",
     "    ## This function is taking all the augmented text and wrapping it so that it can fit into the page\n",
     "    ## it also adds heading to the top of the page\n",
     "\n",
-    "    def list_of_dedication(self, dedication_text):\n",
-    "        list_dedication = []\n",
-    "        self.dedication_text = dedication_text\n",
-    "        for text in self.dedication_text:\n",
-    "            for row in text:\n",
-    "                dedication_text_wrap = augmentation.wrap_text(row)\n",
-    "                dedication_title = \"\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\tDedication\\n\" + dedication_text_wrap\n",
-    "                list_dedication.append(dedication_title)\n",
-    "        return list_dedication\n",
+    "    def list_of_abs(self, abs_text):\n",
+    "        list_abs = []\n",
+    "        self.abs_text = abs_text\n",
+    "        abs_text_wrap = augmentation.wrap_text(self.abs_text)\n",
+    "        abs_title = \"\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\t\\tSummary\\n\" + abs_text_wrap\n",
+    "        list_abs.append(abs_title)\n",
+    "        \n",
+    "        return list_abs\n",
     "    \n",
     "    def text_on_img(self, fileName, text, size):\n",
     "        self.fileName = fileName\n",
@@ -62,7 +61,7 @@
     "        self.size = size\n",
     "        self.W = 2360\n",
     "        self.H = 3200\n",
-    "        font = ImageFont.truetype('NimbusRoman-Regular.otf', size)\n",
+    "        font = ImageFont.truetype('NimbusMonoPS-Regular.otf', size)\n",
     "        image = Image.new(mode = \"RGB\", size = (self.W, self.H), color = \"white\")\n",
     "        draw = ImageDraw.Draw(image)\n",
     "        w, h = draw.textsize(text)\n",
@@ -74,17 +73,18 @@
     "        abstract -- 16 width and height 12\n",
     "        chapter abstract -- 18 width and height 6\n",
     "        '''\n",
-    "        draw.text(((self.W-w)/14,(self.H-h)/8), text, font=font, fill=(0,0,0), spacing=60)\n",
+    "        draw.text(((self.W-w)/13,(self.H-h)/16), text, font=font, fill=(0,0,0), spacing=60)\n",
     "        image.save(fileName)\n",
     "        \n",
     "        return image\n",
     "    \n",
     "    ## This function is calling text_on_image function and save the image to the directory\n",
-    "    def dedication_aug(self, dedication_text_title):\n",
-    "        self.dedication_text_title = dedication_text_title\n",
-    "        for n, row in enumerate(self.dedication_text_title):\n",
-    "            fileName = (\"/home/mchou001/Label-Dedication/aug_text{}.png\".format(n))\n",
-    "            save_image = self.text_on_img(fileName, row, 43) ## dedication -- 43, ack and abstract - 40, gabs -- 38\n",
+    "    def abs_aug(self, abs_text_title):\n",
+    "        self.abs_text_title = abs_text_title\n",
+    "        for n, row in enumerate(self.abs_text_title):\n",
+    "            fileName = (\"/home/mchou001/Label-GeneralAbstract/aug_text{}.png\".format(n))\n",
+    "            ## dedication: 43, ack: 40, chapter abstract: 39, abstract - 42, gabs -- 38\n",
+    "            save_image = self.text_on_img(fileName, row, 38) \n",
     "        \n",
     "        return save_image\n",
     "    \n",
@@ -105,47 +105,46 @@
     "        while lower < upper:\n",
     "            for n, images in enumerate(self.img_files[0:]):\n",
     "                aug_image = img_augmentation(image=cv2.imread(images))\n",
-    "                cv2.imwrite('./Label-Dedication/502/aug{}.png'.format(lower),aug_image)\n",
+    "                cv2.imwrite('./Label-GeneralAbstract/505/aug{}.png'.format(lower),aug_image)\n",
     "                lower += 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 8 µs, sys: 0 ns, total: 8 µs\n",
-      "Wall time: 21.7 µs\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if __name__ == \"__main__\":\n",
     "    \n",
     "    parser = Preprocessor()\n",
     "    augmentation = Augmentation()\n",
     "    \n",
-    "    dedication_text = DEDICATION_TEXT_IMG_AUG()\n",
+    "    abs_text = GABS_TEXT_IMG_AUG()\n",
     "    \n",
     "    etd_data = pd.read_csv('ETD_aug.csv')\n",
     "    etd_data.set_index(\"class\", inplace = True)\n",
     "\n",
-    "    label_dedication = etd_data.loc[\"Label-Dedication\"]\n",
-    "    phrases_dedication = label_dedication['text']\n",
+    "    label_abs = etd_data.loc[\"Label-GeneralAbstract\"]\n",
+    "    phrases_abs = label_abs['text']\n",
+    "\n",
+    "    list_ = []\n",
+    "    for texts in phrases_abs:\n",
+    "        gabs =ast.literal_eval(texts)\n",
+    "        list_.extend(gabs)\n",
     "    \n",
-    "    dedication = dedication_text.list_of_phrases(phrases_dedication)\n",
+    "    splitter = SentenceSplitter(language='en')\n",
+    "    gabs_list = splitter.split(str(list_))\n",
+    "    aug_gabs = augmentation.paraphrased_text(gabs_list)\n",
     "    \n",
-    "    dedication_ = dedication_text.list_of_dedication(dedication)\n",
+    "    aug_gabs_list = abs_text.list_of_abs(aug_gabs)\n",
     "    \n",
-    "    dedication_text_aug = dedication_text.dedication_aug(dedication_)\n",
+    "    abs_text_aug = abs_text.abs_aug(aug_gabs_list)\n",
     "    \n",
-    "    img_path = sorted(glob.glob('./Label-Dedication/*.png'), key = parser.numericalSort)\n",
     "    \n",
-    "    augmented_img = dedication_text.img_transform(img_path)\n",
+    "    img_path = sorted(glob.glob('./Label-GeneralAbstract/*.png'), key = parser.numericalSort)\n",
+    "    \n",
+    "    augmented_img = abs_text.img_transform(img_path)\n",
     "    \n",
     "    %%time \n",
     "    [ x**2 for x in range(10000)]"
